src/test/ui/suggestions/issue-84973.stderr
error[E0277]: the trait bound `Fancy: SomeTrait` is not satisfied
  --> $DIR/issue-84973.rs:6:24
   |
LL |     let o = Other::new(f);
   |             ---------- ^
   |             |          |
   |             |          expected an implementor of trait `SomeTrait`
   |             |          help: consider borrowing here: `&f`
   |             required by a bound introduced by this call
   |
note: required by `Other::<'a, G>::new`
  --> $DIR/issue-84973.rs:27:5
   |
LL |     pub fn new(g: G) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
